--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "unixism"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "A set of tools for working with linux from Rust."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
